force-app/main/default/objects/xDO_TTHAIR_PNR__c/xDO_TTHAIR_PNR__c.object-meta.xml
<CustomObject>
    <label>TTH PNR</label>
    <nameField>
        <label>PNR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PNRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>