force-app/main/default/objects/xDO_TTHAIR_PNR__c/fields/xDO_TTHAIR_Contact__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PNRs</relationshipName>
    <type>Lookup</type>
</CustomField>