force-app/main/default/objects/xDO_TTHAIR_PNR__c/fields/xDO_TTHAIR_Destination_City__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Destination_City__c</fullName>
    <formula>xDO_TTHAIR_Flight__r.xDO_TTHAIR_Departure_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination City</label>
    <type>Text</type>
</CustomField>