force-app/main/default/objects/xDO_TTHAIR_PNR__c/fields/xDO_TTHAIR_Flight__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight Schedule DONOT USE</label>
    <referenceTo>xDO_TTHAIR_Flight__c</referenceTo>
    <relationshipName>PNRs</relationshipName>
    <type>Lookup</type>
</CustomField>