force-app/main/default/objects/xDO_TTHAIR_PNR__c/fields/xDO_TTHAIR_PNR_Status__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_PNR_Status__c</fullName>
    <label>PNR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
                <default>true</default>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>